fixed global overflow bug -made about page responsive

--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -1,5 +1,5 @@
 .who{
-    height: 100vh;
+    min-height: 100vh;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-columns: 1fr;
@@ -36,10 +36,23 @@ line-height: unset;
         transition: all 0.5s ease-in;
 
        & svg{
-          width: 150px;
+          width: clamp(85px, 5vw, 10vw);
           height: unset;
           margin-block: 15px;
         }
       }
     }
   }
+
+  @media (max-width: 600px){
+
+	.who-text p{
+		text-align: justify;
+	}
+	.who-head{
+		text-align: -webkit-center;
+	}
+	.who-head h1{
+		width: 100%;
+	}
+}
