--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ a:hover {
 
 body {
   margin: 0;
-  width: 100vw;
+  width: calc(100vw - 5px);
   min-height: 100vh;
   font-family: 'Lato', sans-serif;
 }
